--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "5.5.*",
         "laravel/socialite": "^3.1",
         "laravel/tinker": "~1.0",
+        "maatwebsite/excel": "^3.1",
         "mollie/laravel-mollie": "2.0",
         "razorpay/razorpay": "2.*",
         "srmklive/paypal": "~1.0",
